// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorNotification component renders correctly with a raw error string 1`] = `
<View
  collapsable={false}
  onTouchEnd={[Function]}
  style={
    {
      "alignSelf": "center",
      "backgroundColor": "rgba(179, 38, 30, 1)",
      "borderRadius": 15,
      "marginBottom": 10,
      "padding": 10,
      "position": "absolute",
      "top": 10,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "width": 600,
    }
  }
  testID="error-notification"
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "textAlign": "center",
        },
        {
          "color": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    This is an error
  </Text>
</View>
`;

exports[`ErrorNotification component renders correctly with a translation key 1`] = `
<View
  collapsable={false}
  onTouchEnd={[Function]}
  style={
    {
      "alignSelf": "center",
      "backgroundColor": "rgba(179, 38, 30, 1)",
      "borderRadius": 15,
      "marginBottom": 10,
      "padding": 10,
      "position": "absolute",
      "top": 10,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "width": 600,
    }
  }
  testID="error-notification"
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "textAlign": "center",
        },
        {
          "color": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    translated:errors.login_failed
  </Text>
</View>
`;
